# interaction-scaling

./: .gitattributes  .gitignore  README.md  analyze_results.py  compile_results.py  generate_paper_tables.py  interaction-scaling-research-plan.md  main.py  pyproject.toml  run_all_hard_benchmarks.py  run_augmentation.py  run_experiments.py  run_heldout_phase1.py  run_onpolicy_augmentation.py  run_webpage_benchmark.py
docs/: ARCHITECTURE.md  EXPERIMENTS.md
notes/: README.md  allocation_findings.md  comprehensive_analysis.md  contribution_5_training.md  cross_model_findings.md  cross_model_v2_findings.md  experiment_log.md  feedback_type_controls.md  finding_01_type2_churn.md  finding_02_prompt_prefix_eval.md  finding_03_eval_artifact_analysis.md  finding_04_interaction_scaling_value.md  finding_05_pr_vs_agentic.md  finding_06_100_percent_humaneval.md  finding_07_self_review_useless.md  finding_08_hard_benchmark_design.md  finding_09_hard_code_results.md  finding_10_hard_benchmark_summary.md  held_out_distillation_plan.md  heldout_phase1_findings.md  iad_baseline_findings.md  phase1_findings.md  phase1_reviewer_weaknesses.md  phase2_findings.md  phase3_heldout_findings.md  phase4_final_findings.md  phase4_internalized_review_plan.md  phase5_complete_findings.md  phase5_final_findings.md  phase5_paper_findings.md  phase5_rft_infrastructure.md  phase5_v3_findings.md  phase5_v4_sweep_findings.md  phase6_findings.md  phase6_status.md  preliminary_findings.md  reasoning_baseline_findings.md  results_summary.md  rubric_geometric_findings.md  scaling_curves_findings.md  (+3 more)
paper/: README.md  arxiv.sty  (+20 more)
(+520 files in other folders)
