[project]
name = "interaction-scaling"
version = "0.1.0"
description = "Interaction Scaling: a third test-time compute axis grounded in environment feedback"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.95.0",
    "evalplus>=0.3.1",
    "google-genai>=1.0.0",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "peft>=0.14.0",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "trl>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The library lives in the top-level `src/` package; installing it (uv does this
# automatically on `uv sync`) puts `src` on the path so `from src...` imports
# resolve no matter which directory a script is launched from.
[tool.hatch.build.targets.wheel]
packages = ["src"]
